tests/attributes/derives.stderr
error: You can't derive on a field
 --> $DIR/derives.rs:5:16
  |
5 |     #[designal(derive = "Debug")]
  |                ^^^^^^
